# column-sketch

./: CMakeLists.txt  README.md  generate_data.py  test_sketch.map.json
apps/: benchmark.cpp  build_sketch.cpp  run_query.cpp  smoke.cpp
data/: u32_sketch.map.json  u32_sketch.sketch
include/csketch/: bitvector.hpp  column.hpp  compression_map.hpp  scan.hpp
python/: prepare_kaggle_column.py
